<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="50dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/doctor" />

    <EditText
        android:id="@+id/username"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:hint="@string/username"
        android:textSize="16sp"
        android:padding="16dp"
        />

    <EditText
        android:id="@+id/signup_email"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:textSize="16sp"
        android:padding="16dp"
         />

    <EditText
        android:id="@+id/signup_password"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="16dp"
        />

    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@color/green"
        android:onClick="createUser"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/common_google_signin_btn_text_light"
        android:padding="15dp"
        android:text="@string/google"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>