<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin.Remove">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/speciality"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="300dp"
        android:id="@+id/specialities"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:entries="@array/specialities"
        android:padding="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/hospital"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hospital"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:hint="Enter Hospital Name"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:hint="Enter Doctor Name"
        android:textSize="16sp" />



    <Button
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/green"
        android:onClick="Remove"
        android:text="remove"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>