<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AddDoctor">

    
 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/speciality"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="300dp"
        android:id="@+id/specialities"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:entries="@array/specialities"
        android:padding="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/experience"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:text="0-5"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:text="5-10"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:text="10-15"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:text="15\+"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:hint="Enter Doctor Name"
        android:textSize="16sp" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="Email"
         android:textColor="@color/blue"
         android:textSize="20sp"
         android:textStyle="bold" />

     <EditText
         android:id="@+id/email"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_marginLeft="20dp"
         android:background="@color/white"
         android:hint="Enter Email Id"
         android:textSize="16sp" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="Password"
         android:textColor="@color/blue"
         android:textSize="20sp"
         android:textStyle="bold" />

     <EditText
         android:id="@+id/password"
         android:layout_width="300dp"
         android:inputType="textPassword"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_marginLeft="20dp"
         android:background="@color/white"
         android:hint="Enter Password"
         android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/hospital"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/hospital"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:hint="Enter Hospital Name"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/location"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:hint="Enter Location"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/fees"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fees"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:hint="Enter Consultant Fees"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/phone_number"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:hint="Enter Phone Number"
        android:textSize="16sp" />

     <Button
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
         android:background="@color/green"
         android:onClick="Add"
         android:text="Add"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold" />

    </LinearLayout>
</ScrollView>